mdapiEYH/objects/blng__Usage__c.object
<CustomObject>
    <label>Usage</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Usage #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>LPCR_TypeEvenement__c</fullName>
        <label>LPCR Type Evenement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gestes commerciaux</fullName>
                </value>
                <value>
                    <fullName>Journées occasionnelles (Micro)</fullName>
                </value>
                <value>
                    <fullName>Heures occasionnelles (Mac)</fullName>
                </value>
                <value>
                    <fullName>Grèves</fullName>
                </value>
                <value>
                    <fullName>Hospitalisation</fullName>
                </value>
                <value>
                    <fullName>Fermeture crèches</fullName>
                </value>
                <value>
                    <fullName>Arrivée retardée de l’enfant</fullName>
                </value>
                <value>
                    <fullName>Éviction pour maladie</fullName>
                </value>
                <value>
                    <fullName>Maladie justifiée</fullName>
                </value>
                <value>
                    <fullName>Mise à pied</fullName>
                </value>
                <value>
                    <fullName>Congés non pris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>AccountUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__MatchingAttribute__c</fullName>
        <label>Matching Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__MatchingId__c</fullName>
        <externalId>true</externalId>
        <label>Matching ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>OrderProductUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>OrderUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PreratedAmount__c</fullName>
        <label>Prerated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__PreratedQuantity__c</fullName>
        <label>Prerated Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ProcessingDate__c</fullName>
        <label>Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__SourceId__c</fullName>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__StatusCode__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__UsageStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UsageSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage Summary</label>
        <referenceTo>blng__UsageSummary__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>